@@ -1,68 +1,94 @@
 package com.wonu606.vouchermanager.service.voucher;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.then;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.times;
 
-import com.wonu606.vouchermanager.domain.voucher.Voucher;
-import com.wonu606.vouchermanager.domain.voucher.VoucherDto;
-import com.wonu606.vouchermanager.repository.voucher.LocalMemoryVoucherVoucherRepository;
+import com.wonu606.vouchermanager.domain.voucher.FixedAmountVoucher;
 import com.wonu606.vouchermanager.repository.voucher.VoucherRepository;
-import java.util.Arrays;
+import com.wonu606.vouchermanager.repository.voucher.query.VoucherInsertQuery;
+import com.wonu606.vouchermanager.repository.voucher.resultset.VoucherInsertResultSet;
+import com.wonu606.vouchermanager.repository.voucher.resultset.VoucherResultSet;
+import com.wonu606.vouchermanager.service.voucher.converter.VoucherServiceConverterManager;
+import com.wonu606.vouchermanager.service.voucher.factory.VoucherFactory;
+import com.wonu606.vouchermanager.service.voucher.factory.util.UUIDGenerator;
+import com.wonu606.vouchermanager.service.voucher.param.VoucherCreateParam;
+import com.wonu606.vouchermanager.service.voucher.result.VoucherResult;
 import java.util.List;
+import java.util.UUID;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
 
 @DisplayName("VoucherService 테스트")
 public class VoucherServiceTest {
 
-    private VoucherFactory factory;
-
-    private VoucherRepository voucherRepository;
-
+    private VoucherRepository repository;
     private VoucherService voucherService;
 
     @BeforeEach
-    public void setup() {
-        this.factory = mock(VoucherFactory.class);
-        this.voucherRepository = mock(LocalMemoryVoucherVoucherRepository.class);
-        this.voucherService = new VoucherService(factory, voucherRepository);
+    void setUp() {
+        repository = mock(VoucherRepository.class);
+        VoucherFactory factory = new VoucherFactory(new FixedUUIDGenerator());
+        VoucherServiceConverterManager converterManager = new VoucherServiceConverterManager();
+        voucherService = new VoucherService(repository, factory, converterManager);
     }
 
     @Test
-    @DisplayName("VoucherDto가 주어지고_createVoucher하면_바우처를 생성한다.")
-    public void GivenVoucherDto_WhenCreateVoucher_ThenReturnExpectedVoucher() {
+    @DisplayName("createVoucher_유효한 파리미터_바우처를 생성한다.")
+    void createVoucher_WithValidParameters_VoucherIsCreated() {
         // Given
-        VoucherDto dto = mock(VoucherDto.class);
-        Voucher expectedVoucher = mock(Voucher.class);
+        double expectedDiscountValue = 50.0;
+        VoucherCreateParam param = new VoucherCreateParam("fixed", expectedDiscountValue);
+        VoucherInsertResultSet successResultSet = new VoucherInsertResultSet(1);
+        given(repository.insert(any())).willReturn(successResultSet);
 
-        given(factory.create(dto)).willReturn(expectedVoucher);
-        given(voucherRepository.save(expectedVoucher)).willReturn(expectedVoucher);
+        VoucherInsertQuery expectedQuery = new VoucherInsertQuery(
+                FixedAmountVoucher.class.getSimpleName(),
+                FixedUUIDGenerator.FIXED_UUID.toString(), expectedDiscountValue);
 
         // When
-        Voucher actualVoucher = voucherService.createVoucher(dto);
+        voucherService.createVoucher(param);
 
         // Then
-        then(factory).should(times(1)).create(dto);
-        then(voucherRepository).should(times(1)).save(expectedVoucher);
-        assertEquals(expectedVoucher, actualVoucher);
+        ArgumentCaptor<VoucherInsertQuery> argument = ArgumentCaptor.forClass(
+                VoucherInsertQuery.class);
+        then(repository).should().insert(argument.capture());
+        VoucherInsertQuery actualQuery = argument.getValue();
+        assertThat(actualQuery).usingRecursiveComparison().isEqualTo(expectedQuery);
     }
 
     @Test
-    @DisplayName("Voucher들을 저장한 뒤_getVoucherList하면_바우처들을 반환한다.")
-    public void GivenSavedVouchers_WhenGetVoucherList_ThenReturnsExpectedVouchers() {
+    @DisplayName("getVoucherList_바우처가 존재한다면_바우처 리스트를 반환한다.")
+    void getVoucherList_WhenVouchersExist_ReturnsListOfVouchers() {
         // Given
-        List<Voucher> expectedVouchers = Arrays.asList(mock(Voucher.class), mock(Voucher.class));
-        given(voucherRepository.findAll()).willReturn(expectedVouchers);
+        VoucherResultSet voucherResultSet = new VoucherResultSet(
+                FixedAmountVoucher.class.getSimpleName(),
+                FixedUUIDGenerator.FIXED_UUID.toString(), 50.0);
+        given(repository.findAll()).willReturn(List.of(voucherResultSet));
+
+        VoucherResult expectedResult = new VoucherResult(voucherResultSet.getUuid(),
+                voucherResultSet.getVoucherClassType(), voucherResultSet.getDiscountValue());
 
         // When
-        List<Voucher> actualVouchers = voucherService.getVoucherList();
+        List<VoucherResult> actualVoucherResults = voucherService.getVoucherList();
 
         // Then
-        then(voucherRepository).should(times(1)).findAll();
-        assertEquals(expectedVouchers, actualVouchers);
+        assertThat(actualVoucherResults).hasSize(1);
+        assertThat(actualVoucherResults).usingRecursiveFieldByFieldElementComparator()
+                .contains(expectedResult);
+    }
+
+    private static class FixedUUIDGenerator extends UUIDGenerator {
+
+        public static UUID FIXED_UUID = UUID.fromString("42424242-4242-4242-4242-424242424242");
+
+        @Override
+        public UUID generateUUID() {
+            return FIXED_UUID;
+        }
     }
 }
